--- a/Daily-Journal/readme
+++ b/Daily-Journal/readme
@@ -1,3 +1,4 @@
 Welcome to my blog website. Here you can write and read interesting blogs
+By Vrishank
 
 https://github.com/Vrishank510/Daily-Journal.git
